@@ -10,7 +10,7 @@ use std::str;
 
 use anyhow::Context;
 use clap::Parser;
-use image::{io::Reader, ImageError, ImageFormat};
+use image::{ImageError, ImageFormat};
 use qrcode::{bits::Bits, QrCode};
 use rqrr::PreparedImage;
 
@@ -107,30 +107,33 @@ pub fn run() -> anyhow::Result<()> {
 
                 let input_format = arg.input_format;
                 #[cfg(feature = "decode-from-svg")]
-                let input_format = if decode::is_svg(&arg.input) {
-                    Some(InputFormat::Svg)
+                let input_format = match arg.input {
+                    Some(ref path) if decode::is_svg(path) => Some(InputFormat::Svg),
+                    _ => input_format,
+                };
+                let input = if let Some(path) = arg.input {
+                    fs::read(&path)
+                        .with_context(|| format!("Could not read data from {}", path.display()))?
                 } else {
-                    input_format
+                    let mut buf = Vec::new();
+                    io::stdin()
+                        .read_to_end(&mut buf)
+                        .context("Could not read data from stdin")?;
+                    buf
                 };
                 let image = match input_format {
                     #[cfg(feature = "decode-from-svg")]
-                    Some(InputFormat::Svg) => decode::from_svg(&arg.input),
-                    Some(format) => decode::load_image_file(
-                        &arg.input,
+                    Some(InputFormat::Svg) => decode::from_svg(&input),
+                    Some(format) => image::load_from_memory_with_format(
+                        &input,
                         format
                             .try_into()
                             .expect("The image format is not supported"),
                     )
                     .map_err(anyhow::Error::from),
-                    _ => Reader::open(&arg.input)
-                        .and_then(Reader::with_guessed_format)
-                        .map_err(ImageError::from)
-                        .and_then(Reader::decode)
-                        .map_err(anyhow::Error::from),
+                    _ => image::load_from_memory(&input).map_err(anyhow::Error::from),
                 }
-                .with_context(|| {
-                    format!("Could not read the image from {}", arg.input.display())
-                })?;
+                .context("Could not read the image")?;
                 let image = image.into_luma8();
 
                 let mut image = PreparedImage::prepare(image);
